# backend/pkg/infrastructure/transport/public.go
@@ -14,9 +14,13 @@ type User struct {
 	Email string `json:"email"`
 }
 
-func NewPublicAPI(userService service.UserService) api.ServerInterface {
+func NewPublicAPI(
+	userService service.UserService,
+	bookService service.BookService,
+) api.ServerInterface {
 	return &public{
 		userService: userService,
+		bookService: bookService,
 	}
 }
 
@@ -26,6 +30,7 @@ type PublicAPI struct {
 
 type public struct {
 	userService service.UserService
+	bookService service.BookService
 }
 
 func (p public) ListUsers(ctx echo.Context) error {
@@ -34,7 +39,6 @@ func (p public) ListUsers(ctx echo.Context) error {
 
 func (p public) CreateUser(ctx echo.Context) error {
 	var input api.CreateUserRequest
-
 	if err := ctx.Bind(&input); err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, api.BadRequestResponse{
 			Message: ptr(fmt.Sprintf("Invalid request: %s", err)),
@@ -59,6 +63,28 @@ func (p public) CreateUser(ctx echo.Context) error {
 func (p public) GetUser(ctx echo.Context, id string) error {
 	//TODO implement me
 	panic("implement me")
+}
+
+func (p public) CreateBook(ctx echo.Context) error {
+	var input api.CreateBookRequest
+	if err := ctx.Bind(&input); err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, api.BadRequestResponse{
+			Message: ptr(fmt.Sprintf("Invalid request: %s", err)),
+		})
+	}
+
+	err := p.bookService.CreateBook(service.CreateBookInput{
+		Title:       input.Title,
+		Description: input.Description,
+	})
+
+	if err != nil {
+		return echo.NewHTTPError(http.StatusInternalServerError, fmt.Sprintf("Failed to create user: %s", err))
+	}
+
+	return ctx.JSON(http.StatusCreated, api.SuccessResponse{
+		Message: ptr("Book created successfully"),
+	})
 }
 
 func ptr(s string) *string {
